--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "@types/mongoose": "^5.11.96",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.12",
     "@types/nodemon": "^1.19.6",
     "axios": "^1.8.4",
+    "cloudinary": "^2.6.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.13.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "qs": "^6.14.0"
   },
   "devDependencies": {
