--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
     "@types/nodemon": "^1.19.6",
+    "@types/socket.io": "^3.0.1",
     "axios": "^1.8.4",
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
@@ -27,7 +28,8 @@
     "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
     "path": "^0.12.7",
-    "qs": "^6.14.0"
+    "qs": "^6.14.0",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.13",
